--- a/assignment_1/public_html/css_sheet.css
+++ b/assignment_1/public_html/css_sheet.css
@@ -1,9 +1,9 @@
 body {
-	background: #f2f2f2;
+	background: #DCEEF2;
 }
 
 header {
-	background-color: #BF0A3A;
+	background-color: #F2D750;
 }
 
 nav li {
@@ -15,7 +15,7 @@ nav ul {
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: grey;
+	background-color: #94A1A6;
 	font-family: arial, sans-serif;
 }
 
@@ -29,4 +29,58 @@ nav li a {
 
 nav li a:hover {
 	background-color: lightgrey;
+}
+
+.food {
+	font-weight: 700;
+	font-size: 24px;
+	margin: 3px;
+}
+
+h1 {
+	font-family: arial, sans-serif;
+	padding: 2px;
+	font-style: italic;
+	text-align: center;
+	margin: 5px;
+}
+
+section {
+	background-color: #f2f2f2;
+	border-style: solid;
+	padding: 5px;
+	margin: 2px;
+	border-width: 3px;
+	border-radius: 10px;
+}
+
+table {
+	border-color: black;
+	border-style: solid;
+	border-width: 2px;
+	margin: 0px;
+	padding: 0px;
+	border-collapse: collapse;
+}
+
+th {
+	border-color: black;
+	border-style: solid;
+	border-width: 2px;
+	margin: 3px;
+	padding: 3px;
+}
+
+td {
+	border-color: black;
+	border-style: solid;
+	border-width: 2px;
+	margin: 3px;
+	padding: 3px;
+}
+
+#challenge {
+	font-weight: 700;
+	font-size: 16px;
+	text-align: center;
 }
